--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
     "react-whatsapp-widget": "^2.2.0",
     "sass": "^1.58.3",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
