--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-whatsapp-widget": "^2.2.0",
     "sass": "^1.58.3",
     "tsparticles": "^2.9.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
