--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://marketintelsolutions.github.io/pacresearch",
+  "homepage": "https://pacresearch.org",
   "name": "pacresearch",
   "version": "0.1.0",
   "private": true,
