deploy custom site

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "homepage": "https://marketintelsolutions.github.io/pacresearch",
+  "homepage": "https://pacresearch.org",
 
   "name": "pacresearch",
   
