--- a/package.json
+++ b/package.json
@@ -1,269 +1,173 @@
 {
-  
+  
   "homepage": "https://pacresearch.org",
-
+  
   "name": "pacresearch",
-  
-
+  
   "version": "0.1.0",
-  
-
+  
   "private": true,
-  
-
+  
   "dependencies": {
-  
-
-    
-
+  
+    
   "@testing-library/jest-dom": "^5.16.5",
-  
-
-    
-
+  
+    
   "@testing-library/react": "^13.4.0",
-  
-
-    
-
+  
+    
   "@testing-library/user-event": "^13.5.0",
-  
-
-    
-
+  
+    
   "axios": "^1.3.4",
-  
-
-    
-
+  
+    
   "buffer": "^6.0.3",
-  
-
-    
-
+  
+    
   "error-ex": "github:Qix-/node-error-ex",
-  
-
-    
-
+  
+    
   "express": "^4.18.2",
-  
-
-    
-
+  
+    
   "firebase": "^9.19.1",
-  
-
-    
-
+  
+    
+  "moment": "^2.29.4",
+  
+    
   "pdf-lib": "^1.17.1",
-  
-
-    
-
+  
+    
   "pdfjs": "^2.4.7",
-  
-
-    
-
+  
+    
   "pdfjs-dist": "^3.5.141",
-  
-
-    
-
+  
+    
   "react": "^18.2.0",
-  
-
-    
-
+  
+    
   "react-dom": "^18.2.0",
-  
-
-    
-
+  
+    
   "react-icons": "^4.7.1",
-  
-
-    
-
+  
+    
   "react-lazy-load-image-component": "^1.5.6",
-  
-
-    
-
+  
+    
   "react-router-dom": "^6.8.1",
-  
-
-    
-
+  
+    
   "react-scripts": "5.0.1",
-  
-
-    
-
+  
+    
   "react-tsparticles": "^2.9.3",
-  
-
-    
-
+  
+    
   "react-whatsapp-widget": "^2.2.0",
-  
-
-    
-
+  
+    
   "sass": "^1.58.3",
-  
-
-    
-
+  
+    
   "tsparticles": "^2.9.3",
-  
-
-    
-
+  
+    
   "uuid": "^9.0.0",
-  
-
-    
-
+  
+    
   "web-vitals": "^2.1.4"
-  
-
+  
   },
-  
-
+  
   "scripts": {
-  
-
-    
-
+  
+    
   "start": "react-scripts start",
-  
+  
+    
   "predeploy": "npm run build",
+  
+    
   "deploy": "gh-pages -d build",
-    
-
+  
+    
   "build": "react-scripts build",
-  
-
-    
-
+  
+    
   "test": "react-scripts test",
-  
-
-    
-
+  
+    
   "eject": "react-scripts eject"
-  
-
+  
   },
-  
-
+  
   "eslintConfig": {
-  
-
-    
-
+  
+    
   "extends": [
-  
-
-    
-
-    
-
+  
+    
+    
   "react-app",
-  
-
-    
-
-    
-
+  
+    
+    
   "react-app/jest"
-  
-
-    
-
+  
+    
   ]
-  
-
+  
   },
-  
-
+  
   "browserslist": {
-  
-
-    
-
+  
+    
   "production": [
-  
-
-    
-
-    
-
+  
+    
+    
   ">0.2%",
-  
-
-    
-
-    
-
+  
+    
+    
   "not dead",
-  
-
-    
-
-    
-
+  
+    
+    
   "not op_mini all"
-  
-
-    
-
+  
+    
   ],
-  
-
-    
-
+  
+    
   "development": [
-  
-
-    
-
-    
-
+  
+    
+    
   "last 1 chrome version",
-  
-
-    
-
-    
-
+  
+    
+    
   "last 1 firefox version",
-  
-
-    
-
-    
-
+  
+    
+    
   "last 1 safari version"
-  
-
-    
-
+  
+    
   ]
-  
-
+  
   },
-  
-
+  
   "devDependencies": {
-  
-
-    
-
+  
+    
   "gh-pages": "^5.0.0"
-  
-
+  
   }
 }
